k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
  labels:
    app: backend-app
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: backend-app
