k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-service
  labels:
    app: my-react-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: my-react-app
